--- a/Labs/L0-BaseLayout/food-app-l0/src/app/shared/navbar/navbar.component.html
+++ b/Labs/L0-BaseLayout/food-app-l0/src/app/shared/navbar/navbar.component.html
@@ -1,3 +1,5 @@
 <div class="menu">
-    <div class="menuItem" *ngFor="let item of navItems">{{item}}</div>
+  <div class="menuItem" *ngFor="let item of navItems" [routerLink]="item.path">
+    {{ item.name }}
+  </div>
 </div>
