--- a/Labs/L0-BaseLayout/food-app-l0/src/app/app.component.html
+++ b/Labs/L0-BaseLayout/food-app-l0/src/app/app.component.html
@@ -1,3 +1,8 @@
+
+<!-- Include bootstrap if wanted
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+-->
+
 <div>
   <div class="navbar">
     <app-navbar></app-navbar>
@@ -7,7 +12,7 @@
       <app-sidemenu></app-sidemenu>
     </div>
     <div class="main">
-      <app-food-container></app-food-container>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
