--- a/Labs/L0-BaseLayout/food-app-l0/src/app/shared/navbar/navbar.component.scss
+++ b/Labs/L0-BaseLayout/food-app-l0/src/app/shared/navbar/navbar.component.scss
@@ -1,11 +1,8 @@
-.menu{
-    display: flex; 
-    width: 100%;
-    flex-direction: row;
-    padding: 1rem;
+mat-toolbar {
+    margin-bottom: 0.8rem;
 }
 
-.menuItem{
+.menuItem {
     margin-right: 0.5rem;
     cursor: pointer;
 }
