--- a/Labs/L0-BaseLayout/food-app-l0/src/app/app.component.html
+++ b/Labs/L0-BaseLayout/food-app-l0/src/app/app.component.html
@@ -1,18 +1,19 @@
-
-<!-- Include bootstrap if wanted
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
--->
-
-<div>
-  <div class="navbar">
-    <app-navbar></app-navbar>
-  </div>
-  <div class="mainrow">
-    <div class="sidebar">
-      <app-sidemenu></app-sidemenu>
+<div
+    class="grid"
+    gdAreas="navbar navbar | sidebar main"
+    gdAreas.lt-md="navbar |main"
+    gdGap="0.5rem"
+    gdRows="4.5em auto"
+    gdColumns="10rem auto"
+    gdColumns.lt-md="100%"
+>
+    <div gdArea="navbar" class="navbar">
+        <app-navbar></app-navbar>
     </div>
-    <div class="main">
-      <router-outlet></router-outlet>
+    <div gdArea="sidebar" class="sidebar" fxHide.lt-md="true">
+        <app-sidemenu></app-sidemenu>
     </div>
-  </div>
+    <div gdArea="main" class="main">
+        <router-outlet></router-outlet>
+    </div>
 </div>
