--- a/Labs/L0-BaseLayout/food-app-l0/src/app/food/food-edit/food-edit.component.html
+++ b/Labs/L0-BaseLayout/food-app-l0/src/app/food/food-edit/food-edit.component.html
@@ -1,36 +1,19 @@
-<div *ngIf="food != null">
-    <table>
-        <tr>
-            <td>Name</td>
-            <td>
-                <input placeholder="Set Name"
-                    type="text" 
-                    [(ngModel)]="food.name"/>
-            </td>
-        </tr>
-        <tr>
-            <td>Price</td>
-            <td>
-                <input type="number" 
-                    placeholder="Set the food price"
-                    [(ngModel)]="food.price"/>
-            </td>
-        </tr>
-        <tr>
-            <td>Calories</td>
-            <td>
-                <input type="number"
-                    placeholder="Set the calories"
-                    [(ngModel)]="food.calories"/>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <button (click)="doSave()">
-                    Save
-                </button>
-            </td>
-            <td></td>
-        </tr>
-    </table>
-</div>
+<mat-card *ngIf="food != null">
+    <mat-card-header>
+        <mat-card-title>Edit Food</mat-card-title>
+    </mat-card-header>
+    <mat-card-content fxLayout="column" fxLayoutAlign="center start">
+        <mat-form-field>
+            <input matInput type="text" placeholder="Name" [(ngModel)]="food.name" />
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput type="number" placeholder="Price" [(ngModel)]="food.price" />
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput type="number" placeholder="Calories" [(ngModel)]="food.calories" />
+        </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions align="end">
+        <button mat-raised-button (click)="doSave()" color="primary">Save</button>
+    </mat-card-actions>
+</mat-card>
