--- a/Labs/L0-BaseLayout/food-app-l0/src/app/food/food-list/food-list.component.html
+++ b/Labs/L0-BaseLayout/food-app-l0/src/app/food/food-list/food-list.component.html
@@ -1,24 +1,42 @@
-<div>
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Calories</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let f of foods">
-        <td>{{ f.name }}</td>
-        <td>{{ f.price }}</td>
-        <td>{{ f.calories }}</td>
-        <td>
-          <!-- <a (click)="selectFood(f)">Select</a> -->
-          <button 
-            (click)="selectFood(f)">Select</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>Food List</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <table mat-table [dataSource]="foods">
+            <mat-text-column name="id"></mat-text-column>
+
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef>Name</th>
+                <td mat-cell *matCellDef="let food">{{ food.name }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="price">
+                <th mat-header-cell *matHeaderCellDef>Price</th>
+                <td mat-cell *matCellDef="let food">{{ food.price }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="calories">
+                <th mat-header-cell *matHeaderCellDef>Calories</th>
+                <td mat-cell *matCellDef="let food">{{ food.calories }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="edit">
+                <th mat-header-cell *matHeaderCellDef>Edit</th>
+                <td mat-cell *matCellDef="let food">
+                    <span>
+                        <a class="clickable" (click)="selectFood(food)">
+                            <mat-icon aria-hidden="false" aria-label="Edit"
+                                >edit</mat-icon
+                            ></a
+                        >
+                    </span>
+                    <!--<a class="clickable" (click)="selectFood(food)">Select</a>-->
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayColumns"></tr>
+        </table>
+    </mat-card-content>
+</mat-card>
