ADD: Data service Lab L4

--- a/Labs/L0-BaseLayout/food-app-l0/src/app/food/food-container/food-container.component.html
+++ b/Labs/L0-BaseLayout/food-app-l0/src/app/food/food-container/food-container.component.html
@@ -1,6 +1,13 @@
+<mat-toolbar>
+    <mat-toolbar-row>
+        <button mat-raised-button color="primary" (click)="onNewFood()">New</button>
+    </mat-toolbar-row>
+</mat-toolbar>
+
 <app-food-list
     [foods]="foods"
-    (selectedFood)="onFoodSelected($event)">
+    (selectedFood)="onFoodSelected($event)"
+    (foodToDelete)="onFoodDelete($event)">
 
 </app-food-list>
 
