Add: Plus to new button

--- a/Labs/L0-BaseLayout/food-app-l0/src/app/food/food-container/food-container.component.html
+++ b/Labs/L0-BaseLayout/food-app-l0/src/app/food/food-container/food-container.component.html
@@ -1,6 +1,8 @@
 <mat-toolbar>
     <mat-toolbar-row>
-        <button mat-raised-button color="primary" (click)="onNewFood()">New</button>
+        <button mat-raised-button color="primary" (click)="onNewFood()">
+            <mat-icon class="mat-18">add</mat-icon> New
+        </button>
     </mat-toolbar-row>
 </mat-toolbar>
 
