--- a/Labs/L0-BaseLayout/food-app-l0/src/app/app.component.scss
+++ b/Labs/L0-BaseLayout/food-app-l0/src/app/app.component.scss
@@ -4,10 +4,6 @@
     width: 100vw;
 }
 
-.sidebar {
-    background-color: lightgray;
+mat-sidenav-container {
+    height: 100%
 }
-
-/*.main {
-    background-color: lightgray;
-}*/
