--- a/Labs/L0-BaseLayout/food-app-l0/src/app/food/food-edit/food-edit.component.html
+++ b/Labs/L0-BaseLayout/food-app-l0/src/app/food/food-edit/food-edit.component.html
@@ -2,18 +2,46 @@
     <mat-card-header>
         <mat-card-title>Edit Food</mat-card-title>
     </mat-card-header>
-    <mat-card-content fxLayout="column" fxLayoutAlign="center start">
-        <mat-form-field>
-            <input matInput type="text" placeholder="Name" [(ngModel)]="food.name" />
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput type="number" placeholder="Price" [(ngModel)]="food.price" />
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput type="number" placeholder="Calories" [(ngModel)]="food.calories" />
-        </mat-form-field>
+    <mat-card-content>
+        <form
+            [formGroup]="editForm"
+            (ngSubmit)="storeFood(editForm)"
+            role="form"
+            novalidate
+            fxLayout="column"
+        >
+            <mat-form-field>
+                <input
+                    matInput
+                    type="text"
+                    placeholder="Name"
+                    formControlName="name"
+                />
+                <mat-error>Name is required (min 3 characters)</mat-error>
+            </mat-form-field>
+            <mat-form-field>
+                <input
+                    matInput
+                    type="number"
+                    placeholder="Price"
+                    formControlName="price"
+                />
+                <mat-error>Must be >= 0</mat-error>
+            </mat-form-field>
+            <mat-form-field>
+                <input
+                    matInput
+                    type="number"
+                    placeholder="Calories"
+                    formControlName="calories"
+                />
+            </mat-form-field>
+            <button mat-raised-button type="submit" color="accent" [disabled]="editForm.invalid">
+                Save
+            </button>
+            <button mat-raised-button color="accent" (click)="onCancel()">
+                Cancel
+            </button>
+        </form>
     </mat-card-content>
-    <mat-card-actions align="end">
-        <button mat-raised-button (click)="doSave()" color="primary">Save</button>
-    </mat-card-actions>
 </mat-card>
